<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">艾享智能家居</string>
    <string name="title_activity_gateway">GatewayActivity</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_add_device">添加设备</string>
    <string name="title_choose_gateway">选择网关</string>
    <string name="title_all_slave">从机列表</string>
    <string name="save">保存</string>
    <string name="content_description_return">返回到上级</string>
    <string name="content_description_fold">折叠选项</string>
    <string name="content_description_check">设备闪烁</string>
    <string name="default_parent_name">普通灯</string>
    <string name="default_child_name">客厅灯</string>
    <string name="door">门</string>
    <string name="content_description_default">默认</string>
    <string name="title_gateway_setting">网关设置</string>
    <string name="area">区域</string>
    <string name="details">分类</string>
    <string name="name">名称</string>
    <string name="comm_type">通讯类型</string>
    <string name="details_type">详细类型</string>
    <string name="exec_id">执行器ID</string>
    <string name="switch_id">通道ID</string>
    <string name="knx_485">485</string>
    <string name="switch_pps">开关(PPS)</string>
    <string name="add">添加</string>
    <string name="clean">清空</string>
    <string name="title_scene_config">场景设置</string>
    <string name="title_device_config">设备设置</string>
    <string name="title_combination_setting">组合设置</string>
    <string name="content_description_title_combination">组合设置的标题</string>
    <string name="commit">提交</string>
    <string name="info_for_input">开关</string>
    <string name="info_for_output">请选择设备</string>
    <string name="title_choose_output">选择输出</string>
    <string name="path">/sdcard/test0.mp4</string>
    <string name="camera_user">用户名</string>
    <string name="version_code">版本号</string>
    <string name="soft_name">软件名</string>
    <string name="camera_pwd">密码</string>
    <string name="str_ok">确定</string>
    <string name="str_cancel">取消</string>
    <string name="exit_alert">确认退出吗 ?</string>
    <string name="password">密码:</string>
    <string name="showpwd">显示密码</string>
    <string name="connected">已连接</string>
    <string name="pwd_no_empty">密码不能为空</string>
    <string name="camera_port">端口</string>
    <string name="send_error">发送失败</string>
    <string name="recv_error">接收失败</string>
    <string name="unknow_error">未知错误</string>
    <string name="disclaimer_conent">深圳市欧杰特科技有限公司保留本软件的所有权，盗版必究。</string>
    <string name="version_conent">V 0.0.0.1</string>
    <string name="contact_me">"公司网站: http://www.object-camera.com客服邮箱:
		support@object-camera.com"</string>
    <string name="more_about_disclaimer">软件声明</string>
    <string name="more_about_version">版本信息</string>
    <string name="more_about_contact">联系我们</string>
    <string name="camera_not_online">相机断线,请回首页重连</string>
    <string name="app_running">正在运行</string>
    <string name="str_version">版本</string>
    <string name="pppp_status_initialing">已连接, 正在初始化</string>
    <string name="delete_camera">删除</string>
    <string name="list_option">操作</string>
    <string name="del_alert">确认删除?</string>
    <string name="str_search">局域网搜索</string>
    <string name="check_loction">查看录像</string>
    <string name="str_add">添加</string>
    <string name="str_about">关于</string>
    <string name="connecting">正在连接...</string>
    <string name="init_network_error">初始化网络失败</string>
    <string name="connect_failed">连接失败</string>
    <string name="edit">修改</string>
    <string name="setting">设置</string>
    <string name="string_about">关于我们</string>
    <string name="camera_type">摄像机类型</string>
    <string name="device_id_name">ID:</string>
    <string name="device_type_name">类型:</string>
    <string name="device_status_name">状态:</string>
    <string name="pppp_status_unknown">未知状态</string>
    <string name="pppp_status_connecting">正在连接</string>
    <string name="pppp_status_online">在线</string>
    <string name="pppp_status_disconnect">断线</string>
    <string name="pppp_status_connect_failed">连接失败</string>
    <string name="pppp_status_pwd_error">密码错误</string>
    <string name="pppp_status_invalid_id">ID号无效</string>
    <string name="pppp_dev_type_unknown">未知类型</string>
    <string name="device_not_on_line">摄像机不在线</string>
    <string name="pppp_mode">模式:</string>
    <string name="pppp_mode_p2p_normal">p2p连接</string>
    <string name="pppp_mode_p2p_relay">p2p转发</string>
    <string name="pppp_mode_unknown">未知</string>
    <string name="pppp_status_connect_timeout">连接超时</string>
    <string name="main_tap_here_add_vidicon">请按此处新增摄像机</string>
    <string name="back">返回</string>
    <string name="done">完成</string>
    <string name="main_select_all">全选</string>
    <string name="main_select_reverse">反选</string>
    <string name="main_edit">编辑</string>
    <string name="main_check">查看</string>
    <string name="main_vidicon">摄像机</string>
    <string name="main_alarm_event">报警事件</string>
    <string name="main_pic">图片</string>
    <string name="main_vid">录像</string>
    <string name="main_remote">远程</string>
    <string name="main_phone">手机</string>
    <string name="main_setting_prompt">摄像机不在线,无法进行设置</string>
    <string name="exit">退出</string>
    <string name="main_alarm">报警</string>
    <string name="main_more">更多</string>
    <string name="main_plea_addcam">请先添加摄像机</string>
    <string name="main_not_administrator">该用户不是管理员</string>
    <string name="main_show_back">再按一次，退出程序！</string>
    <string name="input_camera_name">请输入摄像机名称</string>
    <string name="add_camera">添加摄像机</string>
    <string name="edit_camera">修改摄像机</string>
    <string name="camera_name">名称</string>
    <string name="camera_addr">IP地址</string>
    <string name="input_camera_addr">请输入IP地址</string>
    <string name="input_camera_port">请输入端口</string>
    <string name="input_camera_user">请输入用户名</string>
    <string name="input_camera_id">请输入设备ID</string>
    <string name="camera_id">设备ID</string>
    <string name="scan_cameraid">扫描条码</string>
    <string name="scan_cameraid_fail">扫描失败,请重新扫描</string>
    <string name="add_search_result">搜索结果</string>
    <string name="add_search_no">没有搜索到,请重试...</string>
    <string name="add_twodimensioncode">正在启动二维码程序...</string>
    <string name="searching_tip">正在搜索，请稍候...</string>
    <string name="search_camera">搜索摄像机</string>
    <string name="refresh">刷新</string>
    <string name="setting_camera">摄像机设置</string>
    <string name="setting_wifi">Wifi设置</string>
    <string name="setting_user">用户设置</string>
    <string name="setting_ftp">Ftp设置</string>
    <string name="setting_alerm">报警设置</string>
    <string name="setting_time">设备时钟设置</string>
    <string name="setting_mail">邮件设置</string>
    <string name="setting_sdcard">SD卡设置</string>
    <string name="datetime_setting">时间设置</string>
    <string name="mail_setting">邮件设置</string>
    <string name="ftp_setting">Ftp设置</string>
    <string name="alerm_setting">报警设置</string>
    <string name="wifi">Wifi</string>
    <string name="wifi_checkmode">验证类型:</string>
    <string name="wifi_manager">管理WiFi网络</string>
    <string name="wifi_signal_strong">信号强度:</string>
    <string name="wifi_safe">安全性:</string>
    <string name="wifi_no_safe">无</string>
    <string name="wifi_set_failed">WiFi设置失败</string>
    <string name="wifi_set_success">WiFi设置成功,摄像机正在重启...</string>
    <string name="wifi_not_connected">未连接</string>
    <string name="wifi_scanning">WiFi正在扫描,请稍候...</string>
    <string name="wifi_scan_failed">WiFi扫描失败</string>
    <string name="wifi_getparams">正在获取WiFi信息...</string>
    <string name="wifi_getparams_failed">获取WiFi信息失败</string>
    <string name="wifi_notchange">WiFi没有更改,不需要设置</string>
    <string name="wifi_pwd_toolong">密码不能超过128位</string>
    <string name="user_admin">管理员</string>
    <string name="user_operator">操作者</string>
    <string name="user_visitor">参观者</string>
    <string name="user_setting">用户设置</string>
    <string name="user_set_failed">用户设置失败</string>
    <string name="user_set_success">用户设置成功,摄像机正在重启</string>
    <string name="user_name_no_empty">用户名不能为空</string>
    <string name="user_name">用户名:</string>
    <string name="user_getparams">正在获取用户信息...</string>
    <string name="user_getparams_failed">获取用户信息失败</string>
    <string name="user_name_toolong">用户名不能超过64位</string>
    <string name="user_pwd_toolong">密码不能超过64位</string>
    <string name="alerm_detector_layout">移动侦测布防</string>
    <string name="alerm_detector_sensitivity">移动侦测灵敏度</string>
    <string name="alerm_sensitivity_desc">(数值越小越灵敏)</string>
    <string name="alerm_io_layout">报警输入布防</string>
    <string name="alerm_trigger_level">触发电平</string>
    <string name="alerm_presetsit">报警时预置位联动</string>
    <string name="alerm_io_move">报警后 IO 联动</string>
    <string name="alerm_ioout_level">输出电平</string>
    <string name="alerm_mail_inform">报警后邮件通知</string>
    <string name="alerm_upload_picture">报警后上传图片</string>
    <string name="alerm_upload_picture_time_interval"> 上传图片时间间隔(秒)</string>
    <string name="alerm_trigger_event">报警触发事件</string>
    <string name="alerm_set_failed">报警设置失败</string>
    <string name="alerm_ioin_levelhight">高电平</string>
    <string name="alerm_ioin_levellow">低电平</string>
    <string name="alerm_getparams">正在获取报警信息...</string>
    <string name="alerm_getparams_failed">获取报警信息失败</string>
    <string name="alerm_preset_no">无</string>
    <string name="alerm_uploadinterval_toolong">上传时间不能超过3600秒</string>
    <string name="alerm_uploadpic_prompt">0或空表示不上传图片</string>
    <string name="alerm_log">报警日志</string>
    <string name="alerm_motion_alarm">移动侦测报警</string>
    <string name="alerm_gpio_alarm">IO联动报警</string>
    <string name="alerm_no_log">无报警日志</string>
    <string name="alerm_record">报警后录像</string>
    <string name="date_device_time">设备时钟时间</string>
    <string name="date_device_timezone">设备时区设定</string>
    <string name="date_ntp_server_auto_check">使用 NTP服务器自动校时</string>
    <string name="date_phone_time_auto_check">使用手机时间校准设备时钟</string>
    <string name="date_ntp_server">NTP服务器</string>
    <string name="date_middle_island">(GMT-11:00)中途岛,萨摩亚群岛</string>
    <string name="date_hawaii">(GMT -10:00) 夏威夷</string>
    <string name="date_alaska">(GMT-09:00)阿拉斯加</string>
    <string name="date_pacific_time">(GMT-08:00)太平洋时间(美国和加拿大)</string>
    <string name="date_mountain_time">(GMT-07:00)山地时间(美国和加拿大)</string>
    <string name="date_middle_part_time">(GMT-06:00)中部时间(美国和加拿大),墨西哥城</string>
    <string name="date_eastern_time">(GMT-05:00)东部时间(美国和加拿大),利马,波哥大</string>
    <string name="date_ocean_time">(GMT-04:00)大西洋时间(加拿大),圣地亚哥,拉巴斯</string>
    <string name="date_newfoundland">(GMT-03:30)纽芬兰</string>
    <string name="date_brasilia">(GMT-03:00)巴西利亚,布宜若斯艾丽斯,乔治敦</string>
    <string name="date_center_ocean">(GMT-02:00)中大西洋</string>
    <string name="date_cape_verde_island">(GMT-01:00)佛得角群岛</string>
    <string name="date_greenwich">(GMT)格林威治平时,伦敦,里斯本,卡萨布兰卡</string>
    <string name="date_brussels">(GMT+01:00)布鲁赛尔,巴黎,柏林,罗马,马德里,斯多哥尔摩, 贝尔格莱德, 布拉格</string>
    <string name="date_athens">(GMT +02:00) 雅典, 耶路撒冷, 开罗, 赫尔辛基</string>
    <string name="date_nairobi">(GMT +03:00) 内罗毕, 利雅得, 莫斯科</string>
    <string name="date_teheran">(GMT +03:30) 德黑兰</string>
    <string name="date_baku">(GMT +04:00) 巴库, 第比利斯, 阿布扎比, 马斯科特</string>
    <string name="date_kebuer">(GMT +04:30) 科布尔</string>
    <string name="date_islamabad">(GMT +05:00) 伊斯兰堡, 卡拉奇, 塔森干</string>
    <string name="date_calcutta">(GMT +05:30) 加尔各答, 孟买, 马德拉斯, 新德里</string>
    <string name="date_alamotu">(GMT +06:00) 阿拉木图, 新西伯利亚, 阿斯塔南, 达尔</string>
    <string name="date_bangkok">(GMT +07:00) 曼谷, 河内, 雅加达</string>
    <string name="label_password">密码:</string>
    <string name="label_show_password">显示密码</string>
    <string name="label_device_count">数目:</string>
    <string name="label_device_count_single">单个</string>
    <string name="label_device_count_multiple">多个</string>
    <string name="btn_connect">连接</string>
</resources>