<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    android:orientation="vertical" >
    
	<!-- 标题栏 -->
    
	<RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/ix_green" >

        <ImageView
            android:id="@+id/iv_title_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:src="@drawable/back_white"
            android:contentDescription="@string/content_description_return" />

        <TextView
            android:id="@+id/tv_title_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_gateway_setting"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_title_right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:onClick="showMenu"
            android:src="@drawable/menu"
            android:contentDescription="@string/content_description_return" />
    </RelativeLayout>
    
	<!-- 网关配置 -->

	<ScrollView
	    android:id="@+id/sv_setting"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >

	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="vertical" >

	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginTop="35dp"
	            android:layout_marginRight="10dp"
	            android:layout_marginBottom="5dp"
	            android:orientation="horizontal" >

	            <TextView
	                android:id="@+id/tv_details"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.6"
	                android:layout_marginLeft="20dp"
	                android:textColor="#969696"
	                android:textSize="20sp"
	                android:text="@string/details" />

	            <EditText
	                android:id="@+id/et_details"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="15dp"
	                android:layout_weight="0.4"
	                android:gravity="center"
	                android:focusable="false"
	                android:background="@drawable/gatewaychanging_input_bg"
	                android:textColor="#484848"
	                android:textSize="20sp"
	                android:inputType="text" />
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginTop="15dp"
	            android:layout_marginRight="10dp"
	            android:layout_marginBottom="5dp"
	            android:orientation="horizontal" >

	            <TextView
	                android:id="@+id/tv_name"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.6"
	                android:layout_marginLeft="20dp"
	                android:textColor="#969696"
	                android:textSize="20sp"
	                android:text="@string/name" />

	            <EditText
	                android:id="@+id/et_name"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="15dp"
	                android:layout_weight="0.4"
	                android:gravity="center"
	                android:background="@drawable/gatewaychanging_input_bg"
	                android:textColor="#484848"
	                android:textSize="20sp"
	                android:inputType="text" />
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginTop="15dp"
	            android:layout_marginRight="10dp"
	            android:layout_marginBottom="5dp"
	            android:orientation="horizontal" >

	            <TextView
	                android:id="@+id/tv_comm_type"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.6"
	                android:layout_marginLeft="20dp"
	                android:textColor="#969696"
	                android:textSize="20sp"
	                android:text="@string/comm_type" />

	            <EditText
	                android:id="@+id/et_comm_type"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="15dp"
	                android:layout_weight="0.4"
	                android:inputType="text"
	                android:focusable="false"
	                android:gravity="center"
	                android:background="@drawable/gatewaychanging_input_bg"
	                android:textColor="#969696"
	                android:textSize="20sp"
	                android:text="@string/knx_485" />
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginTop="15dp"
	            android:layout_marginRight="10dp"
	            android:layout_marginBottom="5dp"
	            android:orientation="horizontal" >

	            <TextView
	                android:id="@+id/tv_details_type"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.6"
	                android:layout_marginLeft="20dp"
	                android:textColor="#969696"
	                android:textSize="20sp"
	                android:text="@string/details_type" />

	            <EditText
	                android:id="@+id/et_details_type"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="15dp"
	                android:layout_weight="0.4"
	                android:inputType="text"
	                android:focusable="false"
	                android:gravity="center"
	                android:background="@drawable/gatewaychanging_input_bg"
	                android:textColor="#969696"
	                android:textSize="20sp"
	                android:text="@string/switch_pps" />
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginTop="15dp"
	            android:layout_marginRight="10dp"
	            android:layout_marginBottom="5dp"
	            android:orientation="horizontal" >

	            <TextView
	                android:id="@+id/tv_exec_id"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.6"
	                android:layout_marginLeft="20dp"
	                android:textColor="#969696"
	                android:textSize="20sp"
	                android:text="@string/exec_id" />

	            <EditText
	                android:id="@+id/et_exec_id"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="15dp"
	                android:layout_weight="0.4"
	                android:gravity="center"
	                android:background="@drawable/gatewaychanging_input_bg"
	                android:textColor="#484848"
	                android:textSize="20sp"
	                android:inputType="number" />
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginTop="15dp"
	            android:layout_marginRight="10dp"
	            android:layout_marginBottom="5dp"
	            android:orientation="horizontal" >

	            <TextView
	                android:id="@+id/tv_switch_id"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_weight="0.6"
	                android:layout_marginLeft="20dp"
	                android:textColor="#969696"
	                android:textSize="20sp"
	                android:text="@string/switch_id" />

	            <EditText
	                android:id="@+id/et_switch_id"
	                android:layout_width="match_parent"
	                android:layout_height="wrap_content"
	                android:layout_marginRight="15dp"
	                android:layout_weight="0.4"
	                android:gravity="center"
	                android:background="@drawable/gatewaychanging_input_bg"
	                android:textColor="#484848"
	                android:textSize="20sp"
	                android:inputType="number" />
	            
	        </LinearLayout>
	        
	        <LinearLayout
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginLeft="10dp"
	            android:layout_marginTop="25dp"
	            android:layout_marginRight="10dp"
	            android:layout_marginBottom="5dp"
	            android:baselineAligned="false"
	            android:orientation="horizontal" >
	            
	            <LinearLayout
	            	android:layout_width="match_parent"
	            	android:layout_height="match_parent"
	            	android:layout_weight="1"
	            	android:orientation="vertical" >
	            	
	                <Button
		                android:id="@+id/btn_commit"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:paddingLeft="40dp"
		                android:paddingRight="40dp"
		                android:background="@drawable/btn_add_device_bg"
		                android:textColor="#ffffff"
		                android:textSize="20sp"
		                android:text="@string/add" />
	                
            	</LinearLayout>
            	
	            <LinearLayout
	            	android:layout_width="match_parent"
	            	android:layout_height="match_parent"
	            	android:layout_weight="1"
	            	android:orientation="vertical" >
	            	
	                <Button
		                android:id="@+id/btn_clean"
		                android:layout_width="wrap_content"
		                android:layout_height="wrap_content"
		                android:layout_gravity="center"
		                android:background="@drawable/red_select"
		                android:textColor="#ffffff"
		                android:textSize="20sp"
		                android:text="@string/clean" />
	                
            	</LinearLayout>
            </LinearLayout>
	    </LinearLayout>
	</ScrollView>
    
</LinearLayout>
