<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    android:orientation="vertical" >
    
    <!-- 标题栏 -->
    
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/ix_green" >

        <ImageView
            android:id="@+id/iv_title_left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:clickable="true"
            android:focusable="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:singleLine="true"
            android:src="@drawable/back_white"
            android:contentDescription="@string/content_description_return" />

        <TextView
            android:id="@+id/tv_title_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/title_combination_setting"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />
        
    </RelativeLayout>
    
    <!-- 正文 -->

    <ImageView
        android:id="@+id/iv_title_combination"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="15dp"
        android:src="@drawable/title_combination"
        android:contentDescription="@string/content_description_return" />

    <ListView
        android:id="@+id/lv_combination"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:layout_weight="0.5" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2" >

        <Button
            android:id="@+id/btn_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="40dp"
            android:paddingRight="40dp"
            android:background="@drawable/btn_add_device_bg"
            android:layout_centerInParent="true"
            android:textSize="20sp"
            android:textColor="#ffffff"
            android:text="@string/commit" />
        
    </RelativeLayout>

</LinearLayout>
